--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-slate
 title: GrayWolf64's homepage
 description: Notices for non-strangers, plans, ideas and so on.
