--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: Tairikuookami's Homepage
 description: Notices for non-strangers, plans, ideas and so on.
+markdown: GFM
